--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -88,3 +88,40 @@ a {
     transform: translateY(-2px); // a little lift on hover
   }
 }
+
+// --- Hamburger Menu Button ---
+.hamburger-button {
+  // These styles apply on ALL screen sizes
+  width: 30px;
+  height: 22px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  padding: 0;
+  @media (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .hamburger-line {
+    width: 100%;
+    height: 3px;
+    background-color: $color-off-white;
+    border-radius: 3px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  // Animate to an "X" when the .is-active class is added by JavaScript
+  &.is-active {
+    .hamburger-line:nth-child(1) {
+      transform: translateY(9px) rotate(45deg);
+    }
+    .hamburger-line:nth-child(2) {
+      opacity: 0;
+    }
+    .hamburger-line:nth-child(3) {
+      transform: translateY(-10px) rotate(-45deg);
+    }
+  }
+}
