--- a/src/_includes/layout/base.njk
+++ b/src/_includes/layout/base.njk
@@ -4,20 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <link rel="stylesheet" href="/css/tailwind.css">	
   <link rel="stylesheet" href="/css/main.css">
 </head>
-<body>
+<body class="flex flex-col min-h-screen">
  {% include "partials/navbar.njk" %}
 
-  <main>
+  <main class="flex-grow">
     {% block content %}
       {{ content | safe }}
     {% endblock %}
   </main>
 
-  <footer>
-    &copy; My D&D Campaign Site
-  </footer>
-</body>
+{% include "partials/footer.njk" %}
 </html>
