--- a/src/_includes/layout/base.njk
+++ b/src/_includes/layout/base.njk
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport view-transition" content="same-origin width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IM+Fell+English+SC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/tailwind.css">	
   <link rel="stylesheet" href="/css/main.css">
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen font-dnd-body text-xl">
  {% include "partials/navbar.njk" %}
 
   <main class="flex-grow">
