--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
-<footer class="mt-auto py-8 bg-darkest">
-  <div class="container mx-auto px-6 text-center text-gray-medium">
+<footer class="mt-auto py-8 bg-darkest relative rounded-xl">
+  <div class="container mx-auto px-6 text-center text-gray-medium ">
   DND Stuff
   </div>
 </footer>
