--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,19 +1,19 @@
-<header class="bg-dark-gray shadow-lg sticky top-0 z-50 relative">
-  <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+<header class="bg-dark-gray shadow-lg sticky top-0 z-50 relative rounded-xl">
+  <nav class="container mx-auto px-6 py-3 flex justify-between items-stretch">
     {# Site Title / Logo #}
     <div>
-      <a href="/" class="text-off-white text-2xl font-bold hover:text-red-primary transition-colors">
+      <a href="/" class="text-off-white text-2xl font-bold transition-colors">
         D&D Campaign
       </a>
     </div>
 
     {# Desktop Navigation Links (Visible on medium screens and up) #}
     <div class="hidden md:flex space-x-6">
-      <a href="/blog/" class="text-gray-light hover:text-red-bright transition-colors">Campaign Log</a>
-      <a href="/characters/" class="text-gray-light hover:text-red-bright transition-colors">NPCs</a>
-      <a href="/items/" class="text-gray-light hover:text-red-bright transition-colors">Items</a>
-      <a href="/players/" class="text-gray-light hover:text-red-bright transition-colors">Players</a>
-      <a href="/misc/" class="text-gray-light hover:text-red-bright transition-colors">One Shots and Memes</a>
+      <a href="/blog/" class="text-gray-light hover:text-red-bright transition-colors h-full py-0 px-3 flex items-center">Campaign Log</a>
+      <a href="/characters/" class="text-gray-light hover:text-red-bright transition-colors h-full py-0 px-3 flex items-center">NPCs</a>
+      <a href="/items/" class="text-gray-light hover:text-red-bright transition-colors h-full py-0 px-3 flex items-center">Items</a>
+      <a href="/players/" class="text-gray-light hover:text-red-bright transition-colors h-full py-0 px-3 flex items-center">Players</a>
+      <a href="/misc/" class="text-gray-light hover:text-red-bright transition-colors h-full py-0 px-3 flex items-center">One Shots and Memes</a>
     </div>
 
     <button id="hamburger-button" class="hamburger-button md:hidden" aria-label="Open Menu">
