--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -4,7 +4,8 @@ title: "Campaign Log"
 ---
 
 <main class="container">
-  <h1>{{ title }}</h1>
+  <div class="container mx-auto px-4 py-12">
+    <h1 class="text-4xl lg:text-5xl text-center font-dnd-head mb-8">{{ title }}</h1>
   <p>Follow our party's journey from their humble beginnings to their most heroic triumphs. This log chronicles every session, detailing the challenges overcome, the alliances forged, and the mysteries uncovered.</p>
 
   {# This is where a list of all blog/log posts will be generated #}
