--- a/src/misc/index.njk
+++ b/src/misc/index.njk
@@ -4,7 +4,7 @@ title: "One Shots and Memes"
 ---
 
 <div class="container mx-auto px-4 py-12">
-  <h1 class="text-5xl font-bold text-red-primary font-serif text-center mb-16">{{ title }}</h1>
+    <h1 class="text-4xl lg:text-5xl text-center font-dnd-head mb-8">{{ title }}</h1>
 
   {# First, we check if the collection actually has items #}
   {% if collections.misc and collections.misc.length %}
