--- a/src/players/index.njk
+++ b/src/players/index.njk
@@ -3,7 +3,7 @@ layout: "layout/base.njk"
 title: "The Adventuring Party"
 ---
 <div class="container mx-auto px-4 py-12">
-  <h1 class="text-5xl font-bold text-red-primary font-serif text-center mb-16">{{ title }}</h1>
+    <h1 class="text-4xl lg:text-5xl text-center font-dnd-head mb-8">{{ title }}</h1>
 
   {# First, we check if the collection actually has items #}
   {% if collections.players and collections.players.length %}
@@ -20,7 +20,7 @@ title: "The Adventuring Party"
           {# Image Column #}
           <div class="w-full md:w-2/5">
             {% if item.data.photo %}
-              <img src="{{ item.data.photo | url }}" alt="Image for {{ item.data.title }}" class="w-full h-auto rounded-lg shadow-lg object-cover">
+              <img src="{{ item.data.photo | url }}" alt="Image for {{ item.data.title }}" class="w-full h-auto rounded-xl shadow-lg object-cover">
             {% else %}
               <div class="w-full aspect-square bg-darkest flex items-center justify-center rounded-lg">
                 <span class="text-gray-medium text-lg">No Image</span>
